# conc_os

./: .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: acpi_handling.rs  apic.rs  constants.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  mutex.rs  network.rs  pci.rs  serial.rs  utils.rs  vga.rs  virtio.rs
src/alloc/: mod.rs  ppa.rs
src/allocation/: allocator.rs  mod.rs  ppa.rs
src/network/: arp.rs  device.rs  handler.rs  mod.rs
src/task/: executor.rs  mod.rs  network.rs  serial.rs
