[package]
name = "conc_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
x86_64 = { version = "*", features = ["instructions"]}
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.6.0"
virtio-drivers = { version = "0.13.0", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-device", "virtio-net-pci,netdev=net0", "-netdev", "user,id=net0"]

[[bin]]
name = "conc_os"
test = false
bench = false
