[package]
name = "conc_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
x86_64 = { version = "*", features = ["instructions"]}
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.6.0"
virtio-drivers = { version = "0.13.0" }
linked_list_allocator = "0.10.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"]}
conquer-once = { version = "0.2.0", default-features = false}
raw-cpuid = "11.6.0"
acpi = "6"
pic8259 = "0.11.0"
x2apic = "0.5.0"
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"]}

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-d", "int", "-accel", "tcg", "-machine", "pc", "-drive", "format=raw,file={}", "-device", "virtio-net-pci,netdev=net0", "-netdev", "user,id=net0"]

[[bin]]
name = "conc_os"
test = false
bench = false
